Regression: Boolean modifier create uncorrect weight attribute for bevel modifier #103011

Closed
opened 2022-12-08 06:19:51 +01:00 by Mike · 15 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-09 00:25, hash: 81558783e4
Worked: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-09 22:58, hash: 352d55b1c8

Cused by: 291c313f80

Short description of error

Regression: Boolean modifier create uncorrect weight attribute for bevel modifier

Steps to reproduce

  1. Boolean modifier on cube .001, difference mode from 002 cube.
  2. Bevel modifier on cube 001, limit method Weight.
  3. In object mode bevel on cube 001 not work.
  4. In edit mode bevel work.
  5. Go to cube 002 in edit mode
  6. Just change some edge attribute Weight, after that cube 001 start work correct

2022-12-15 17-34-55.mp4

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-09 00:25, hash: `81558783e4` Worked: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-09 22:58, hash: `352d55b1c8` Cused by: 291c313f80 **Short description of error** Regression: Boolean modifier create uncorrect weight attribute for bevel modifier **Steps to reproduce** 1. Boolean modifier on cube `.001`, difference mode from `002` cube. 2. Bevel modifier on cube `001`, limit method `Weight`. 3. In object mode bevel on cube `001` not work. 4. In edit mode bevel work. 5. Go to cube `002` in edit mode 6. Just change some edge attribute `Weight`, after that cube `001` start work correct [2022-12-15 17-34-55.mp4](https://archive.blender.org/developer/F14059696/2022-12-15_17-34-55.mp4)
Author

Added subscriber: @MikeKirillov

Added subscriber: @MikeKirillov

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'

The limit mode says you have one short edge.
I don't see an example in front of my eyes, but for some reason it seems to me that the Difference operation is just to make one very small edge somewhere in your model.

The limit mode says you have one short edge. I don't see an example in front of my eyes, but for some reason it seems to me that the `Difference` operation is just to make one very small edge somewhere in your model.
Author

In #103011#1456701, @mod_moder wrote:
The limit mode says you have one short edge.
I don't see an example in front of my eyes, but for some reason it seems to me that the Difference operation is just to make one very small edge somewhere in your model.

Maybe, but why same operation in 331 works, while in 340 don't? Is there any changes to bevel in 340?

> In #103011#1456701, @mod_moder wrote: > The limit mode says you have one short edge. > I don't see an example in front of my eyes, but for some reason it seems to me that the `Difference` operation is just to make one very small edge somewhere in your model. Maybe, but why same operation in 331 works, while in 340 don't? Is there any changes to bevel in 340?

I don't know, attach an example file.

I don't know, attach an example file.
Author
[bool.blend](https://archive.blender.org/developer/F14059656/bool.blend)
Iliya Katushenock changed title from Boolean modifier disables bevel modifier with weight limit method to Regression: Boolean modifier create uncorrect weight attribute for bevel modifier 2022-12-15 15:44:26 +01:00

Changed status from 'Archived' to: 'Confirmed'

Changed status from 'Archived' to: 'Confirmed'

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

Hello. Thank you for your patience and for submitting your example file. I was able to figure out what you meant and it's a major regression!

@HooglyBoogly

Hello. Thank you for your patience and for submitting your example file. I was able to figure out what you meant and it's a major regression! @HooglyBoogly

Added subscriber: @JamellMoore

Added subscriber: @JamellMoore
Hans Goudey self-assigned this 2022-12-22 18:58:47 +01:00

@HooglyBoogly I've been looking at this today. If it saves you time the issue seems to be caused by the fact that the function calls within the imesh_to_mesh function only copy named attributes over to the resulting mesh. The issue seems is resolved when the CD_BWEIGHT layer is copied over.

@HooglyBoogly I've been looking at this today. If it saves you time the issue seems to be caused by the fact that the function calls within the imesh_to_mesh function only copy named attributes over to the resulting mesh. The issue seems is resolved when the CD_BWEIGHT layer is copied over.
Member

@JamellMoore Thanks for looking into this. If you have a fix, feel free to claim the task and post a patch! I only "claim" it because otherwise it's too easy to forget about it.

@JamellMoore Thanks for looking into this. If you have a fix, feel free to claim the task and post a patch! I only "claim" it because otherwise it's too easy to forget about it.

This issue was referenced by a7cec5a4db

This issue was referenced by a7cec5a4dbfb30ba0aa709e6765c1927faaba340
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103011
No description provided.