Fix T103011: Exact boolean skips copying edge custom data layers

When converting from imesh to mesh for the final result, custom
data should be copied from ALL operands including the main mesh.

Differential Revision: https://developer.blender.org/D16854