source/blender/blenkernel/intern/mesh_boolean_convert.cc
@@ -689,7 +689,7 @@ static void merge_vertex_loop_poly_customdata_layers(Mesh *target, MeshesToIMesh
 
 static void merge_edge_customdata_layers(Mesh *target, MeshesToIMeshInfo &mim)
 {
-  for (int mesh_index = 1; mesh_index < mim.meshes.size(); ++mesh_index) {
+  for (int mesh_index = 0; mesh_index < mim.meshes.size(); ++mesh_index) {
     const Mesh *me = mim.meshes[mesh_index];
     if (me->totedge) {
       CustomData_merge(
